# pygli

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pip.yaml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
python/: CMakeLists.txt  example.cpp  pygli.cpp
src/: CMakeLists.txt  float_convert.hpp  pygli.cpp
src/pygli/: __init__.py
tests/: test_basic.py
